V6994: Fix during Local Simulation

--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L0/Pages/L0_P816.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L0/Pages/L0_P816.xaml
@@ -90,7 +90,7 @@
         <Labels:DeviceLabel ComponentName="L2+809-01-MA1" Canvas.Left="1213" Canvas.Top="531" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+812-01-MA1" Canvas.Left="821" Canvas.Top="221" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L2+809-41-LS1" Canvas.Left="1279" Canvas.Top="435" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#1}" Canvas.Left="340" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#2}" Canvas.Left="1012" Canvas.Top="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#1}" Canvas.Left="340" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#2}" Canvas.Left="1012" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
