--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P460.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P460.xaml
@@ -77,14 +77,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="140" StatusComponent="L1+470-21-CV1" Canvas.Left="405" Canvas.Top="628"/>
-        <Labels:Pipe Color="Water" Width="178" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-32-CV1" Canvas.Left="478" Canvas.Top="599" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="178" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+357-31-CV1" Canvas.Left="478" Canvas.Top="599" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L0+357-32-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="146" StatusComponent="L0+357-32-CV1" Canvas.Left="423" Canvas.Top="512" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="146" StatusComponent="L0+357-31-CV1" Canvas.Left="423" Canvas.Top="512" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L0+357-32-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+473-01-MA1" Canvas.Left="922" Canvas.Top="287" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -135,7 +135,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" Color="Water" StatusComponent="L1+477-01-MA1" VisibilityComponent="L1+477-33-CV1" Canvas.Left="1286" Canvas.Top="785" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="54" StatusComponent="467-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="976" Canvas.Top="724" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1253" Canvas.Top="762"/>
         <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1108" Canvas.Top="501">
             <Machines:CV_Valve.RenderTransform>
