--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Pages/L2_P350.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Pages/L2_P350.xaml
@@ -113,7 +113,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="276" StatusComponent="L2+370-21-CV1" Canvas.Left="1065" Canvas.Top="628"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="720" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="302" Canvas.Top="781"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="314" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="366" Canvas.Top="472">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="314" Color="Water" StatusComponent="L2+373-01-MA1" Canvas.Left="366" Canvas.Top="472" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -139,7 +139,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="248" StatusComponent="L2+373-01-MA1" Canvas.Left="196" Canvas.Top="472"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="248" StatusComponent="L2+373-01-MA1" Canvas.Left="196" Canvas.Top="472" VisibilityComponent="L2+354-32-CV1" VisibilitySignal="LS2"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="450"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1330" Canvas.Top="606"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="339" Canvas.Top="586">
@@ -221,8 +221,8 @@
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="L2+350-01-MA1" JumpToLabel="L2+330-WASHING" Canvas.Left="114" Canvas.Top="9"/>
         <Labels:JumpLabel JumpFromLabel="L2+354-HEAT" JumpToLabel="L2+330-WASHING" Direction="Left" Canvas.Left="114" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="L2+380-01-MA1" JumpToLabel="L2+456-01-MA1" Canvas.Left="1310" Canvas.Top="77"/>
-        <Labels:JumpLabel JumpFromLabel="L2+373-32-CV1" JumpToLabel="L0+345-MICROFILT" Direction="Left" Canvas.Left="114" Canvas.Top="748" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="L0+352-MICROFILT" JumpToLabel="L0+502-01-MA1" Direction="Left" Canvas.Left="460" Canvas.Top="619" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="L2+354-32-CV1" JumpToLabel="L0+345-MICROFILT" Direction="Left" Canvas.Left="114" Canvas.Top="748" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="L2+352-MICROFILT" JumpToLabel="L0+502-01-MA1" Direction="Left" Canvas.Left="460" Canvas.Top="619" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L2+370-41-LT1" JumpToLabel="L2+477-01-MA1" Canvas.Left="1310" Canvas.Top="479" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L2+352-MICROFILT" JumpToLabel="L0+363-01-MA1" Canvas.Left="711" Canvas.Top="392" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L2+349-31-CV1" Canvas.Left="71" Canvas.Top="218" HorizontalAlignment="Left" VerticalAlignment="Center"/>
