--- a/Prevu.Synoptics.V6994_Lyondell_Basell/PlantView.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/PlantView.xaml
@@ -79,19 +79,19 @@
         <Labels:GroupLabel GroupName="L1+230" Canvas.Left="1481" Canvas.Top="317" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L1+330" Canvas.Left="1795" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L1+350" Canvas.Left="1795" Canvas.Top="535" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="L1+430" Canvas.Left="1990" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="L1+460" Canvas.Left="1990" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L1+810" Canvas.Left="2101" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L2+330" Canvas.Left="1795" Canvas.Top="1009" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L2+350" Canvas.Left="1795" Canvas.Top="1075" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="L2+430" Canvas.Left="1990" Canvas.Top="1009" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="L2+460" Canvas.Left="1990" Canvas.Top="1009" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L2+810" Canvas.Left="2101" Canvas.Top="1009" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="L0+268" Canvas.Left="908" Canvas.Top="769" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="L0+816" Canvas.Left="908" Canvas.Top="769" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L1+290" Canvas.Left="1591" Canvas.Top="317" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L1+160" Canvas.Left="1371" Canvas.Top="317" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L2+230" Canvas.Left="1536" Canvas.Top="858" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="L2+160" Canvas.Left="1424" Canvas.Top="858" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#1}" Canvas.Left="1144" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#2}" Canvas.Left="1144" Canvas.Top="708" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#0}" Canvas.Left="795" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#1}" Canvas.Left="1144" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#2}" Canvas.Left="1144" Canvas.Top="708" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="36" d:Foreground="White" Text="{lex:Loc Line#0}" Canvas.Left="795" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
