--- a/Prevu.Synoptics.V3923_Evanses/Pages/P608.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P608.xaml
@@ -280,5 +280,6 @@
         </TransformGroup>
       </Machines:External.RenderTransform>
     </Machines:External>
+    <Labels:DeviceLabel ComponentName="EXT-COMM" Canvas.Left="904" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
