--- a/Prevu.Synoptics.V6120_Novatex/Pages/P170.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P170.xaml
@@ -95,7 +95,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="52" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1060" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="178-31-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe Width="52" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1060" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="178-31-CV1" VisibilitySignal="LS-OPEN">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -159,7 +159,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="254" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="910" Canvas.Top="443" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="178-31-CV1" VisibilitySignal="LS1">
+    <Labels:Pipe Width="254" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="910" Canvas.Top="443" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="178-31-CV1" VisibilitySignal="LS-CLOSED">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
