--- a/Prevu.Synoptics.V6120_Novatex/OverallView.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/OverallView.xaml
@@ -38,7 +38,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="2510" RenderTransformOrigin="0.5,0.5" StatusComponent="117-01-MA1" Canvas.Left="4608" Canvas.Top="134" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="45" RenderTransformOrigin="0.5,0.5" StatusComponent="224-01-MA1" Canvas.Left="123" Canvas.Top="2348" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="8853" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="200" Canvas.Top="2202" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" />
+        <Labels:Pipe Width="8942" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="200" Canvas.Top="2202" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="171" Canvas.Top="2231" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -424,23 +424,23 @@
         </Labels:Pipe>
         <Labels:Pipe Width="1416" RenderTransformOrigin="0.5,0.5" StatusComponent="246-01-MA1" Canvas.Left="62" Canvas.Top="3138" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="246-01-MA1" Canvas.Left="1406" Canvas.Top="3019" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="594" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1442" Canvas.Top="2622" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="528" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1475" Canvas.Top="2655" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="1090" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1734" Canvas.Top="2329" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="310" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1734" Canvas.Top="2392" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="109" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1634" Canvas.Top="2915" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="2787" Canvas.Top="2356" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="2787" Canvas.Top="2356" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="714" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1410" Canvas.Top="2744" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="690" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1422" Canvas.Top="2756" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -449,7 +449,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="835" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="937" Canvas.Top="3096" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="863" Canvas.Top="2917" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="267" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1764" Canvas.Top="2392" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="1052" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1764" Canvas.Top="2329" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="188" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="847" Canvas.Top="3007" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -584,8 +584,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="125" RenderTransformOrigin="0.5,0.5" StatusComponent="184-01-MA1" Canvas.Left="6122" Canvas.Top="1567" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="8962" Canvas.Top="899" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" />
-        <Labels:Pipe Width="1306" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="8398" Canvas.Top="1551" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" >
+        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="9051" Canvas.Top="1047" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" />
+        <Labels:Pipe Width="1158" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="8561" Canvas.Top="1624" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -631,5 +631,12 @@
         <local:P890 CacheMode="BitmapCache" Canvas.Left="5823" Canvas.Top="4513" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P950 CacheMode="BitmapCache" Canvas.Left="5763" Canvas.Top="5548" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P997 CacheMode="BitmapCache" Canvas.Left="7019" Canvas.Top="6112" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1741" Canvas.Top="2350" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
     </Canvas>
 </UserControl>
