--- a/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
@@ -268,7 +268,7 @@
     <Labels:JumpLabel JumpFromLabel="879-31-CV1" JumpToLabel="878-01-MA1" Canvas.Left="51" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:JumpLabel JumpFromLabel="879-31-CV1" JumpToLabel="910-01-EC1" Canvas.Left="417" Canvas.Top="47" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:JumpLabel JumpFromLabel="886-01-MA1" JumpToLabel="917-01-MA1" Canvas.Left="834" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:JumpLabel JumpFromLabel="880-01-ES3" JumpToLabel="893-01-MA1" Canvas.Left="648" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:JumpLabel JumpFromLabel="880-01-ES3" JumpToLabel="893-01-MA1" Canvas.Left="648" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Center" Loaded="JumpLabel_Loaded" />
     <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="920-01-EC1" Canvas.Left="1246" Canvas.Top="428" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left" />
     <Labels:JumpLabel JumpFromLabel="908-01-MA1" JumpToLabel="948-31-CV1" Canvas.Left="1421" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center" />
   </Canvas>
