--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P350.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P350.xaml
@@ -113,7 +113,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="276" StatusComponent="L1+370-21-CV1" Canvas.Left="1065" Canvas.Top="628"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="720" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="302" Canvas.Top="781"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="314" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="366" Canvas.Top="472" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="314" Color="Water" StatusComponent="L1+373-01-MA1" Canvas.Left="366" Canvas.Top="472">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -139,7 +139,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="248" StatusComponent="L1+373-01-MA1" Canvas.Left="196" Canvas.Top="472" VisibilityComponent="L1+354-32-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Color="Water" Width="83" StatusComponent="L1+373-01-MA1" Canvas.Left="362" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" StatusComponent="L1+373-01-MA1" Canvas.Left="196" Canvas.Top="472" VisibilityComponent="L1+354-31-CV1" VisibilitySignal="LS2"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="450"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1330" Canvas.Top="606"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="339" Canvas.Top="586">
