V6994: Added new component in P230

--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P230.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L1/Pages/L1_P230.xaml
@@ -19,7 +19,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+160-71-ES1" PipeHeight="Medium" Canvas.Left="71" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+165-01-MA1" PipeHeight="Medium" Canvas.Left="317" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+170-01-MA1" PipeHeight="Medium" Canvas.Left="317" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -219,5 +219,6 @@
         <Labels:DeviceLabel ComponentName="L1+170-01-MA1" Canvas.Left="238" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L1+165-01-MA1" Canvas.Left="273" Canvas.Top="112" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="L1+160-LEVEL" DetailsPageName="L1_D160" Canvas.Left="159" Canvas.Top="173" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L1+160-BUNKER" Canvas.Left="98" Canvas.Top="291" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
