--- a/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Pages/L2_P230.xaml
+++ b/Prevu.Synoptics.V6994_Lyondell_Basell/L2/Pages/L2_P230.xaml
@@ -11,7 +11,7 @@
              x:Class="Prevu.Synoptics.L2_P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+165-01-MA1" PipeHeight="Medium" Canvas.Left="317" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+170-01-MA1" PipeHeight="Medium" Canvas.Left="317" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -184,5 +184,6 @@
         <Labels:DeviceLabel ComponentName="L2+260-01-MA1" Canvas.Left="899" Canvas.Top="314" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L2+255-PADDLES" Canvas.Left="709" Canvas.Top="314" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L2+250-41-LT2" Canvas.Left="571" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="L2+160-BUNKER" Canvas.Left="98" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
